k8s/blueprints/hydra-login-consent-node/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hydra-login-consent-node
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
