k8s/blueprints/hydra-login-consent-node/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hydra-login-consent-node
spec:
  hostnames:
    - oauth2-ui.developer-friendly.blog
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: global
      namespace: cert-manager
      sectionName: http
  rules:
    - backendRefs:
        - kind: Service
          name: hydra-login-consent-node
          port: 80
      filters:
        - responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=31536000; includeSubDomains; preload
          type: ResponseHeaderModifier
      matches:
        - path:
            type: PathPrefix
            value: /
